horizontal scroll fix

--- a/src/Structure/Services/services.module.css
+++ b/src/Structure/Services/services.module.css
@@ -1,13 +1,14 @@
 .services {
   
     max-height: 900px;
-    width: 100%;
-    padding: 20px;
+    max-width: 100%;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0px;
+    box-sizing: border-box;
    
   }
   .servicesList {
@@ -19,7 +20,7 @@
     flex-wrap: nowrap;
     align-items: center;
     justify-content: flex-start;
-    overflow-x: auto;
+    overflow-x: scroll;
     
   }
   .servicesListItem {
