--- a/src/mainApp.module.css
+++ b/src/mainApp.module.css
@@ -14,6 +14,24 @@
   width:100vw;
   max-width: 100%;
 }
+
+
+/* hide the scrollbar track */
+.app::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* style the scrollbar thumb */
+.app::-webkit-scrollbar-thumb {
+  background-color: #bd0e0e;
+  border-radius: 10px;
+}
+
+/* hide the scrollbar buttons */
+.app::-webkit-scrollbar-button {
+  display: none;
+}
+
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
